[gd_scene load_steps=4 format=3 uid="uid://eohxndqnij0x"]

[ext_resource type="Script" path="res://main.gd" id="1_7i1tr"]
[ext_resource type="Script" path="res://classes/schematic.gd" id="2_evx7y"]
[ext_resource type="PackedScene" uid="uid://blyoi2nc61uvt" path="res://io_manager.tscn" id="3_x8pl6"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7i1tr")

[node name="VB" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="HB" type="HBoxContainer" parent="VB"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="SaveButton" type="Button" parent="VB/HB"]
layout_mode = 2
text = "Save"

[node name="LoadButton" type="Button" parent="VB/HB"]
layout_mode = 2
text = "Load"

[node name="BlockButton" type="Button" parent="VB/HB"]
layout_mode = 2
text = "Load As Block"

[node name="AddPartMenu" type="MenuButton" parent="VB/HB"]
layout_mode = 2
text = "Add Part"

[node name="IOButton" type="Button" parent="VB/HB"]
layout_mode = 2
text = "IO Config"

[node name="Schematic" type="GraphEdit" parent="VB"]
layout_mode = 2
size_flags_vertical = 3
right_disconnects = true
scroll_offset = Vector2(0, -23)
arrange_nodes_button_hidden = true
script = ExtResource("2_evx7y")

[node name="IOConfig" parent="." instance=ExtResource("3_x8pl6")]
visible = false

[connection signal="pressed" from="VB/HB/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="VB/HB/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="VB/HB/BlockButton" to="." method="_on_block_button_pressed"]
[connection signal="pressed" from="VB/HB/IOButton" to="." method="_on_io_button_pressed"]
